--- a/client/src/stylesheets/_form.sass
+++ b/client/src/stylesheets/_form.sass
@@ -8,3 +8,6 @@
 
   @media (min-width: $screen-md-min)
     margin-left: -($grid-gutter-width / 2)
+
+.form-control:focus
+  box-shadow: none
